# typelist

./: .gitignore  Cargo.toml  LICENSE_MIT  LICENSE_ZLIB  README.md  build.rs
.cargo/: config.toml
codegen/: Cargo.toml
codegen/src/: alphabet.rs  constraints.rs  impl.rs  lib.rs  mapping.rs  types.rs  util.rs  value.rs  variant.rs
examples/: basics.rs  fibration.rs  folding.rs  mapping.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: gen.rs  lib.rs
